iron bloom piles, rename immersion folder to source

--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -102,63 +102,63 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Immersion\Content\AiTask\AiTaskFear.cs" />
-    <Compile Include="Immersion\Content\BlockEntityBehaviors\BEBehaviorConsumable.cs" />
-    <Compile Include="Immersion\ClassRegistry.cs" />
-    <Compile Include="Immersion\Content\AiTask\AiTaskSleep.cs" />
-    <Compile Include="Immersion\Content\Block Behavior\BlockCreateBehavior.cs" />
-    <Compile Include="Immersion\Content\Block Behavior\BlockSwapBehavior.cs" />
-    <Compile Include="Immersion\Content\Block Behavior\ChimneyBehavior.cs" />
-    <Compile Include="Immersion\Content\Block Behavior\LampConnectorBehavior.cs" />
-    <Compile Include="Immersion\Content\Block Behavior\LampPostBehavior.cs" />
-    <Compile Include="Immersion\Content\Block Behavior\RotateNinety.cs" />
-    <Compile Include="Immersion\Content\BlockEntityRenderer\PestleRenderer.cs" />
-    <Compile Include="Immersion\Content\BlockEntity\BlockEntityCraftingStation.cs" />
-    <Compile Include="Immersion\Content\BlockEntity\BlockEntityMortarAndPestle.cs" />
-    <Compile Include="Immersion\Content\BlockEntityBehaviors\BEBehaviorScary.cs" />
-    <Compile Include="Immersion\Content\BlockEntity\BlockEntityChimney.cs" />
-    <Compile Include="Immersion\Content\BlockEntityBehaviors\BEBehaviorTransient.cs" />
-    <Compile Include="Immersion\Content\BlockEntity\IngotPileOverride.cs" />
-    <Compile Include="Immersion\Content\Block\BlockChandelierFix.cs" />
-    <Compile Include="Immersion\Content\Block\BlockCheeseCloth.cs" />
-    <Compile Include="Immersion\Content\Block\BlockCraftingStation.cs" />
-    <Compile Include="Immersion\Content\Block\BlockDryingStation.cs" />
-    <Compile Include="Immersion\Content\Block\BlockGiantReeds.cs" />
-    <Compile Include="Immersion\Content\Block\BlockLogWall.cs" />
-    <Compile Include="Immersion\Content\Block\BlockLooseStonesModified.cs" />
-    <Compile Include="Immersion\Content\Block\BlockMortarAndPestle.cs" />
-    <Compile Include="Immersion\Content\Block\BlockImmersionRoads.cs" />
-    <Compile Include="Immersion\Content\Block\FixedStairs.cs" />
-    <Compile Include="Immersion\Content\EntityBehavior\BehaviorFeatherPluck.cs" />
-    <Compile Include="Immersion\Content\EntityBehavior\BehaviorMilkable.cs" />
-    <Compile Include="Immersion\Content\EntityBehavior\BehaviorNotifyHerd.cs" />
-    <Compile Include="Immersion\Content\EntityBehavior\BehaviorPortionGrow.cs" />
-    <Compile Include="Immersion\Content\EntityBehavior\BehaviorSlaughterable.cs" />
-    <Compile Include="Immersion\Content\Item\ItemAdze.cs" />
-    <Compile Include="Immersion\Content\Item\ItemGiantReedsRoot.cs" />
-    <Compile Include="Immersion\Content\Item\ItemMultiPropFood.cs" />
-    <Compile Include="Immersion\Content\Item\ItemPropick.cs" />
-    <Compile Include="Immersion\Content\Item\ItemSickle.cs" />
-    <Compile Include="Immersion\Content\Item\ItemSlaughteringAxe.cs" />
-    <Compile Include="Immersion\Content\Item\ItemSwapBlocks.cs" />
-    <Compile Include="Immersion\Content\Properties\AnimProps.cs" />
-    <Compile Include="Immersion\Content\Properties\CraftingProp.cs" />
-    <Compile Include="Immersion\Content\Properties\SwapBlocks.cs" />
-    <Compile Include="Immersion\Content\Utility\AreaMethods.cs" />
-    <Compile Include="Immersion\Content\Utility\Extensions.cs" />
-    <Compile Include="Immersion\Content\Utility\HandAnimations.cs" />
-    <Compile Include="Immersion\Content\Utility\LevenshteinDistance.cs" />
-    <Compile Include="Immersion\Content\Utility\Missing.cs" />
-    <Compile Include="Immersion\Content\Utility\ShaderTest.cs" />
-    <Compile Include="Immersion\Content\WorldGen\GenDeepOreBits.cs" />
-    <Compile Include="Immersion\Content\WorldGen\ModifyLakes.cs" />
-    <Compile Include="Immersion\Debugging\RedirectLogs.cs" />
-    <Compile Include="Immersion\Systems\InWorldCraftingSystem.cs" />
-    <Compile Include="Immersion\Systems\LootVesselFix.cs" />
-    <Compile Include="Immersion\Systems\PalmTreeMod.cs" />
-    <Compile Include="Immersion\Systems\Remapper.cs" />
-    <Compile Include="Immersion\Systems\ReturnBlockTest.cs" />
-    <Compile Include="Immersion\Immersion.cs" />
+    <Compile Include="Source\Content\AiTask\AiTaskFear.cs" />
+    <Compile Include="Source\Content\BlockEntityBehaviors\BEBehaviorConsumable.cs" />
+    <Compile Include="Source\ClassRegistry.cs" />
+    <Compile Include="Source\Content\AiTask\AiTaskSleep.cs" />
+    <Compile Include="Source\Content\Block Behavior\BlockCreateBehavior.cs" />
+    <Compile Include="Source\Content\Block Behavior\BlockSwapBehavior.cs" />
+    <Compile Include="Source\Content\Block Behavior\ChimneyBehavior.cs" />
+    <Compile Include="Source\Content\Block Behavior\LampConnectorBehavior.cs" />
+    <Compile Include="Source\Content\Block Behavior\LampPostBehavior.cs" />
+    <Compile Include="Source\Content\Block Behavior\RotateNinety.cs" />
+    <Compile Include="Source\Content\BlockEntityRenderer\PestleRenderer.cs" />
+    <Compile Include="Source\Content\BlockEntity\BlockEntityCraftingStation.cs" />
+    <Compile Include="Source\Content\BlockEntity\BlockEntityMortarAndPestle.cs" />
+    <Compile Include="Source\Content\BlockEntityBehaviors\BEBehaviorScary.cs" />
+    <Compile Include="Source\Content\BlockEntity\BlockEntityChimney.cs" />
+    <Compile Include="Source\Content\BlockEntityBehaviors\BEBehaviorTransient.cs" />
+    <Compile Include="Source\Content\BlockEntity\IngotPileOverride.cs" />
+    <Compile Include="Source\Content\Block\BlockChandelierFix.cs" />
+    <Compile Include="Source\Content\Block\BlockCheeseCloth.cs" />
+    <Compile Include="Source\Content\Block\BlockCraftingStation.cs" />
+    <Compile Include="Source\Content\Block\BlockDryingStation.cs" />
+    <Compile Include="Source\Content\Block\BlockGiantReeds.cs" />
+    <Compile Include="Source\Content\Block\BlockLogWall.cs" />
+    <Compile Include="Source\Content\Block\BlockLooseStonesModified.cs" />
+    <Compile Include="Source\Content\Block\BlockMortarAndPestle.cs" />
+    <Compile Include="Source\Content\Block\BlockImmersionRoads.cs" />
+    <Compile Include="Source\Content\Block\FixedStairs.cs" />
+    <Compile Include="Source\Content\EntityBehavior\BehaviorFeatherPluck.cs" />
+    <Compile Include="Source\Content\EntityBehavior\BehaviorMilkable.cs" />
+    <Compile Include="Source\Content\EntityBehavior\BehaviorNotifyHerd.cs" />
+    <Compile Include="Source\Content\EntityBehavior\BehaviorPortionGrow.cs" />
+    <Compile Include="Source\Content\EntityBehavior\BehaviorSlaughterable.cs" />
+    <Compile Include="Source\Content\Item\ItemAdze.cs" />
+    <Compile Include="Source\Content\Item\ItemGiantReedsRoot.cs" />
+    <Compile Include="Source\Content\Item\ItemMultiPropFood.cs" />
+    <Compile Include="Source\Content\Item\ItemPropick.cs" />
+    <Compile Include="Source\Content\Item\ItemSickle.cs" />
+    <Compile Include="Source\Content\Item\ItemSlaughteringAxe.cs" />
+    <Compile Include="Source\Content\Item\ItemSwapBlocks.cs" />
+    <Compile Include="Source\Content\Properties\AnimProps.cs" />
+    <Compile Include="Source\Content\Properties\CraftingProp.cs" />
+    <Compile Include="Source\Content\Properties\SwapBlocks.cs" />
+    <Compile Include="Source\Content\Utility\AreaMethods.cs" />
+    <Compile Include="Source\Content\Utility\Extensions.cs" />
+    <Compile Include="Source\Content\Utility\HandAnimations.cs" />
+    <Compile Include="Source\Content\Utility\LevenshteinDistance.cs" />
+    <Compile Include="Source\Content\Utility\Missing.cs" />
+    <Compile Include="Source\Content\Utility\ShaderTest.cs" />
+    <Compile Include="Source\Content\WorldGen\GenDeepOreBits.cs" />
+    <Compile Include="Source\Content\WorldGen\ModifyLakes.cs" />
+    <Compile Include="Source\Debugging\RedirectLogs.cs" />
+    <Compile Include="Source\Systems\InWorldCraftingSystem.cs" />
+    <Compile Include="Source\Systems\LootVesselFix.cs" />
+    <Compile Include="Source\Systems\PalmTreeMod.cs" />
+    <Compile Include="Source\Systems\Remapper.cs" />
+    <Compile Include="Source\Systems\ReturnBlockTest.cs" />
+    <Compile Include="Source\Immersion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -219,7 +219,7 @@
     <Folder Include="bin\Immersion\assets\immersion\textures\block\stone\roads\roman\" />
     <Folder Include="bin\Immersion\assets\immersion\textures\block\stone\roads\stones\" />
     <Folder Include="bin\Totems\assets\totems\recipes\clayforming\" />
-    <Folder Include="Immersion\Content\Entity\" />
+    <Folder Include="Source\Content\Entity\" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitattributes" />
