--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -32,37 +32,28 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="cairo-sharp">
-      <HintPath>..\..\VS-1.11-X\Lib\cairo-sharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\cairo-sharp.dll</HintPath>
     </Reference>
     <Reference Include="CommandLine">
-      <HintPath>..\..\VS-1.11-X\Lib\CommandLine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="csogg">
-      <HintPath>..\..\VS-1.11-X\Lib\csogg.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\csogg.dll</HintPath>
     </Reference>
     <Reference Include="csvorbis">
-      <HintPath>..\..\VS-1.11-X\Lib\csvorbis.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\csvorbis.dll</HintPath>
     </Reference>
     <Reference Include="ENet">
-      <HintPath>..\..\VS-1.11-X\Lib\ENet.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\ENet.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\VS-1.11-X\Lib\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\VS-1.12-X\Lib\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK">
-      <HintPath>..\..\VS-1.11-X\Lib\OpenTK.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="protobuf-net">
-      <HintPath>..\..\VS-1.11-X\Lib\protobuf-net.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -73,8 +64,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Tavis.JsonPatch">
-      <HintPath>..\..\VS-1.11-X\Lib\Tavis.JsonPatch.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\Tavis.JsonPatch.dll</HintPath>
     </Reference>
     <Reference Include="VintagestoryAPI">
       <HintPath>..\..\VintagestoryAPI.dll</HintPath>
@@ -85,20 +75,16 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="VSCreativeMod">
-      <HintPath>..\..\VS-1.11-X\Mods\VSCreativeMod.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Mods\VSCreativeMod.dll</HintPath>
     </Reference>
     <Reference Include="VSEssentials">
-      <HintPath>..\..\VS-1.11-X\Mods\VSEssentials.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Mods\VSEssentials.dll</HintPath>
     </Reference>
     <Reference Include="VSSurvivalMod">
-      <HintPath>..\..\VS-1.11-X\Mods\VSSurvivalMod.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Mods\VSSurvivalMod.dll</HintPath>
     </Reference>
     <Reference Include="websocket-sharp">
-      <HintPath>..\..\VS-1.11-X\Lib\websocket-sharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\VS-1.12-X\Lib\websocket-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
