--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -32,36 +32,36 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="cairo-sharp">
-      <HintPath>..\..\VS-1.12-X\Lib\cairo-sharp.dll</HintPath>
+      <HintPath>..\..\Lib\cairo-sharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="CommandLine">
-      <HintPath>..\..\VS-1.12-X\Lib\CommandLine.dll</HintPath>
+      <HintPath>..\..\Lib\CommandLine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="csogg">
-      <HintPath>..\..\VS-1.12-X\Lib\csogg.dll</HintPath>
+      <HintPath>..\..\Lib\csogg.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="csvorbis">
-      <HintPath>..\..\VS-1.12-X\Lib\csvorbis.dll</HintPath>
+      <HintPath>..\..\Lib\csvorbis.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ENet">
-      <HintPath>..\..\VS-1.12-X\Lib\ENet.dll</HintPath>
+      <HintPath>..\..\Lib\ENet.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\VS-1.12-X\Lib\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\Lib\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="OpenTK">
-      <HintPath>..\..\VS-1.12-X\Lib\OpenTK.dll</HintPath>
+      <HintPath>..\..\Lib\OpenTK.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="protobuf-net">
-      <HintPath>..\..\VS-1.12-X\Lib\protobuf-net.dll</HintPath>
+      <HintPath>..\..\Lib\protobuf-net.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -73,7 +73,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Tavis.JsonPatch">
-      <HintPath>..\..\VS-1.12-X\Lib\Tavis.JsonPatch.dll</HintPath>
+      <HintPath>..\..\Lib\Tavis.JsonPatch.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VintagestoryAPI">
@@ -85,19 +85,19 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="VSCreativeMod">
-      <HintPath>..\..\VS-1.12-X\Mods\VSCreativeMod.dll</HintPath>
+      <HintPath>..\..\Mods\VSCreativeMod.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VSEssentials">
-      <HintPath>..\..\VS-1.12-X\Mods\VSEssentials.dll</HintPath>
+      <HintPath>..\..\Mods\VSEssentials.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VSSurvivalMod">
-      <HintPath>..\..\VS-1.12-X\Mods\VSSurvivalMod.dll</HintPath>
+      <HintPath>..\..\Mods\VSSurvivalMod.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="websocket-sharp">
-      <HintPath>..\..\VS-1.12-X\Lib\websocket-sharp.dll</HintPath>
+      <HintPath>..\..\Lib\websocket-sharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -113,12 +113,13 @@
     <Compile Include="Source\Content\Block Behavior\LampPostBehavior.cs" />
     <Compile Include="Source\Content\Block Behavior\RotateNinety.cs" />
     <Compile Include="Source\Content\BlockEntityRenderer\PestleRenderer.cs" />
-    <Compile Include="Source\Content\BlockEntity\BlockEntityCraftingStation.cs" />
-    <Compile Include="Source\Content\BlockEntity\BlockEntityMortarAndPestle.cs" />
+    <Compile Include="Source\Content\BlockEntities\BlockEntityCraftingStation.cs" />
+    <Compile Include="Source\Content\BlockEntities\BlockEntityMortarAndPestle.cs" />
     <Compile Include="Source\Content\BlockEntityBehaviors\BEBehaviorScary.cs" />
-    <Compile Include="Source\Content\BlockEntity\BlockEntityChimney.cs" />
+    <Compile Include="Source\Content\BlockEntities\BlockEntityChimney.cs" />
     <Compile Include="Source\Content\BlockEntityBehaviors\BEBehaviorTransient.cs" />
-    <Compile Include="Source\Content\BlockEntity\IngotPileOverride.cs" />
+    <Compile Include="Source\Content\BlockEntities\IngotPileOverride.cs" />
+    <Compile Include="Source\Content\BlockEntities\BlockEntityDryingStation.cs" />
     <Compile Include="Source\Content\Block\BlockSisalPlant.cs" />
     <Compile Include="Source\Content\Block\BlockWell.cs" />
     <Compile Include="Source\Content\Item\ItemIngotOverride.cs" />
@@ -152,12 +153,11 @@
     <Compile Include="Source\Content\Utility\HandAnimations.cs" />
     <Compile Include="Source\Content\Utility\LevenshteinDistance.cs" />
     <Compile Include="Source\Content\Utility\Missing.cs" />
-    <Compile Include="Source\Content\Utility\ShaderTest.cs" />
     <Compile Include="Source\Content\WorldGen\GenDeepOreBits.cs" />
     <Compile Include="Source\Content\WorldGen\GenRiverMap.cs" />
     <Compile Include="Source\Content\WorldGen\ModifyLakes.cs" />
     <Compile Include="Source\Debugging\RedirectLogs.cs" />
-    <Compile Include="Source\Content\BlockEntity\BEPalmTree.cs" />
+    <Compile Include="Source\Content\BlockEntities\BEPalmTree.cs" />
     <Compile Include="Source\Content\Block\BlockPalmTree.cs" />
     <Compile Include="Source\Systems\InWorldCraftingSystem.cs" />
     <Compile Include="Source\Systems\LootVesselFix.cs" />
